# yew-example

./: .env  Cargo.toml  index.html  index.scss
src/: fetcher.rs  hello.rs  home.rs  main.rs  rest.rs
