[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
gloo-net = "0.2.6"
yew-router = "0.17.0"
web-sys = "0.3.61"
wasm-bindgen = "0.2.84"
serde = "1.0.152"
rgb = "0.8.35"
