[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
web-sys = "0.3.61"
wasm-bindgen = "0.2.84"
serde = "1.0.152"
rgb = { version = "0.8.35", features = ["serde"] }
dotenv = "0.15.0"
gloo-net = "0.2.6"
serde-wasm-bindgen = "0.4.5"
hex = "0.4.3"
js-sys = "0.3.61"
serde_json = "1.0.92"
dotenv_codegen = "0.15.0"
stylist = { version = "0.12.0", features = ["yew_integration"] }
maplit = "1.0.2"
anyhow = "1.0.69"
